# learnopengl

./: 1.model_loading.fs  CMakeLists.txt  br  imgui.ini  singleColor.fs
src/: main.cpp  model.h  shader.h  shaders.h
src/shaders/: 5.4.light_casters.fs  framebuffers_screen.fs  lightCube.fs  lighting.fs  lighting.vs
src/shaders/default/: vertex.glsl
src/shaders/glowire/: fragment.glsl  vertex.glsl
src/shaders/zbuffer/: fragment.glsl  vertex.glsl
